--- a/annotations_all_piple_line.ipynb
+++ b/annotations_all_piple_line.ipynb
@@ -2,88 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n",
-      "###########################expand obj###################################\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2], 3: [3, 4]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "id_dic:{0: [0, 1, 2]}\n",
-      "###########################flip###################################\n",
-      "###########################crop###################################\n",
-      "#################################rescale###############################\n"
+      "for create negtive sample\n"
      ]
     },
     {
@@ -92,7 +18,7 @@
        "0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,9 +33,9 @@
     "from pathlib import Path\n",
     "\n",
     "time_str = (datetime.datetime.now()).strftime(\"%Y%m%d\")\n",
-    "pre_fix = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_zhuhai_sigle_motorbike/VOC2007/'\n",
-    "generated_xml_dir = pre_fix + '/Annotations/'\n",
-    "generated_image_dir = pre_fix + '/JPEGImages/'\n",
+    "pre_fix = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_bkg/VOC2007/'\n",
+    "generated_xml_dir = pre_fix + '/Annotations_/'\n",
+    "generated_image_dir = pre_fix + '/JPEGImages_/'\n",
     "\n",
     "image_dir = pre_fix + '/seed_i/'\n",
     "xml_dir = pre_fix + '/seed_x/'\n",
@@ -128,6 +54,7 @@
     "SEED_IMG_DIR = image_dir\n",
     "GENE_IMG_DIR = generated_image_dir\n",
     "GENE_XML_DIR = generated_xml_dir\n",
+    "SEED_BKG_DIR = pre_fix + '/seed_b/'\n",
     "\n",
     "\n",
     "# RT:RightTop \n",
@@ -422,11 +349,11 @@
     "    xmax_ = min(bbox_a[1], bbox_b[1])\n",
     "    ymin_ = max(bbox_a[2], bbox_b[2])\n",
     "    ymax_ = min(bbox_a[3], bbox_b[3])\n",
-    "    if((xmax_ - xmin_ < 10) or (ymax_ - ymin_ < 10)):\n",
+    "    if((xmax_ - xmin_ < 20) or (ymax_ - ymin_ < 20)):\n",
     "        return False\n",
     "    return [xmin_, xmax_, ymin_, ymax_]\n",
     "\n",
-    "def generate_new_bbox_within_distance(img_size, img_obj_size, old_bbox, scale_x=2.5, scale_y=2.5):\n",
+    "def generate_new_bbox_within_distance(img_size, img_obj_size, old_bbox, scale_x=20, scale_y=4):\n",
     "    #array_x = np.arange(int(img_size[1] - img_obj_size[1]))\n",
     "    array_x = np.arange(max(0, int((old_bbox[0]+old_bbox[1])/2 - scale_x*img_obj_size[1])),\\\n",
     "    min(int((old_bbox[0]+old_bbox[1])/2 + scale_x*img_obj_size[1]), int(img_size[1] - img_obj_size[1])))\n",
@@ -454,47 +381,98 @@
     "        xmlbox = obj.find('bndbox')\n",
     "        xmlbox.find('xmin').text, xmlbox.find('xmax').text = xmlbox.find('xmax').text, xmlbox.find('xmin').text\n",
     "    return etree\n",
+    "def expand_sample_wich_include_certain_class(gener_dir_xml, gener_dir_img, \n",
+    "                                             target_classes, xml_full_path, \n",
+    "                                             img_full_path, N):\n",
+    "    os.system('mkdir ' + gener_dir_xml)\n",
+    "    os.system('mkdir ' + gener_dir_img)\n",
+    "    xmls = os.listdir(xml_full_path)\n",
+    "    for xml in xmls:\n",
+    "        tree=ET.parse(xml_full_path + xml) \n",
+    "        objs = get_obj_from_xml(xml_full_path + xml)\n",
+    "        FLAG_FOUND = False\n",
+    "        for obj in objs:\n",
+    "            cls = get_cls_from_xmlobj(obj)\n",
+    "            if(not cls in target_classes):\n",
+    "                continue\n",
+    "            FLAG_FOUND = True\n",
+    "        if(FLAG_FOUND):\n",
+    "            for i in range(N):\n",
+    "                time_str = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S%f_\")\n",
+    "                os.system('cp ' + xml_full_path + xml + ' ' + \n",
+    "                          gener_dir_xml + time_str + '_' + xml)\n",
+    "                os.system('cp ' + img_full_path + xml[:-3] + 'jpg' + ' ' + \n",
+    "                          gener_dir_img + time_str + '_' + xml[:-3] + 'jpg')\n",
+    "                \n",
+    "def create_negtive_samples_from_bkg(seed_bkg_dir, N):\n",
+    "    for i in range(N):\n",
+    "        bkgs = os.listdir(seed_bkg_dir)\n",
+    "        for bkg in bkgs:\n",
+    "            bkg_xml = generated_xml_dir + bkg[:-4] + '.xml'\n",
+    "            if(i == 0):\n",
+    "                image_file = seed_bkg_dir + bkg\n",
+    "                origimg = cv2.imread(image_file)\n",
+    "                height = origimg.shape[0]\n",
+    "                width = origimg.shape[1]\n",
+    "                depth = origimg.shape[2]\n",
     "\n",
+    "                xml_str = \"<annotation>\\n\\t\\\n",
+    "                <folder>image</folder>\\n\\t\\\n",
+    "                <filename>\" + bkg + \"</filename>\\n\\t\\\n",
+    "                \" + \"<path>\" + image_file + \"</path>\\n\\t\\\n",
+    "                <source>\\n\\t\\t\\\n",
+    "                <database>Unknown</database>\\n\\t\\\n",
+    "                </source>\\n\\t\\\n",
+    "                <size>\\n\\t\\t\\\n",
+    "                <width>\" + str(width) + \"</width>\\n\\t\\t\\\n",
+    "                <height>\" + str(height) + \"</height>\\n\\t\\t\\\n",
+    "                <depth>\" + str(depth) + \"</depth>\\n\\t\\\n",
+    "                </size>\\n\\t\\\n",
+    "                <segmented>0</segmented>\"\n",
+    "                xml_str += \"\\n</annotation>\"\n",
+    "                fileObject = open(generated_xml_dir + bkg[:-4] + '.xml', 'w')\n",
+    "                fileObject.write(xml_str)\n",
+    "                fileObject.close()\n",
+    "            else:\n",
+    "                os.system('cp ' + seed_bkg_dir + bkg + ' ' + generated_image_dir + '_' + str(i) + bkg)\n",
+    "                os.system('cp ' + bkg_xml + ' ' + generated_xml_dir + '_' + str(i) + bkg[:-4] + '.xml')\n",
+    "'''\n",
     "############################################ for expand obj ##############################################\n",
-    "REPEAT_TIMES = 3\n",
+    "REPEAT_TIMES = 2\n",
     "seed_xml_names = os.listdir(SEED_XML_DIR)\n",
     "seed_xml_names.sort()\n",
     "print(len(seed_xml_names))\n",
-    "#all_class = ['bus', 'car', 'truck', 'motorbike', 'bicycle', 'person', 'plate']\n",
+    "all_class = ['bus', 'car', 'truck', 'motorbike', 'bicycle', 'person', 'plate']\n",
     "#all_class = [\"waterloged\", \"hollow\", \"gap\", \"damaged\"]\n",
-    "#####!!!!!!!!!!!!!!!!!!! there is a bug, sometimes expand obj not work for one box box in another !!!!!!!!!####\n",
+    "###!!!!!!!!!!!!!!!!!!! there is a bug, sometimes expand obj not work for one box box in another !!!!!!!!!####\n",
     "### It seems like the bug has some relishionships with the order of class name, may be bigger box should first?\n",
     "\n",
-    "all_class = [\"face\", \"helmet\", \"plate\", \"rider\", \"car\", \"truck\"]\n",
-    "target_class = [\"rider\", \"face\", \"helmet\", \"plate\", \"car\", \"truck\"]\n",
-    "#target_class = ['bus', 'car', 'truck']\n",
-    "LOOP_TIMES = 10\n",
+    "#all_class = [\"2_person\", \"3_person\", \"face\", \"helmet\", \"plate\", \"car\", \"rider\"]\n",
+    "#target_class = [\"2_person\", \"3_person\", \"face\", \"helmet\", \"plate\", \"car\", \"rider\"]\n",
+    "target_class = all_class\n",
+    "LOOP_TIMES = 0\n",
     "print(\"###########################expand obj###################################\")\n",
     "\n",
     "for i in range (LOOP_TIMES):\n",
     "    for xml_name in seed_xml_names:\n",
-    "        #img_name = SEED_IMG_DIR + xml_name[:-3] + 'jpg'\n",
     "        img_name = SEED_IMG_DIR + xml_name[:-3] + TAIL\n",
     "        xml_name = SEED_XML_DIR + xml_name\n",
     "        if(not os.path.isfile(img_name)):\n",
     "            img_name = img_name[:-3] + 'png'\n",
     "            if(not os.path.isfile(img_name)):\n",
     "                continue\n",
-    "        #print(img_name)\n",
-    "        #print(xml_name)\n",
-    "        #if(int(xml_name[-9:-4]) < 9071):\n",
-    "        #    continue\n",
     "        \n",
     "        tree=ET.parse(xml_name)\n",
     "        img = cv2.imread(img_name)\n",
-    "        if(img.shape[0] >= 1080):\n",
-    "            REPEAT_TIMES = 5\n",
     "        objs = get_obj_from_xml(xml_name)\n",
     "        bboxes = get_bboxes_from_etree(tree)\n",
-    "        \n",
+    "        if(img.shape[0] >= 1080):\n",
+    "            REPEAT_TIMES = int(15/len(bboxes))\n",
+    "        else:\n",
+    "            REPEAT_TIMES = int(10/len(bboxes))\n",
     "        flag_found = False\n",
     "        i = 0\n",
-    "        #------------------------------------------------------------\n",
+    "        #------------------------------------------------\n",
     "        bboxes_target = {}\n",
     "        for obj_element in objs:\n",
     "            bbox = get_bbox_from_xmlobj(obj_element)           \n",
@@ -505,25 +483,27 @@
     "                bboxes_target[(i)] = bbox\n",
     "            i = i + 1\n",
     "        id_dic = {}\n",
-    "        ##------------------------------------------------##\n",
+    "        #------------------------------------------------\n",
     "        target_keys = bboxes_target.keys()\n",
     "        target_bboxes = bboxes_target.values()\n",
     "        target_keys_list = list(target_keys)\n",
     "        target_bboxes_list = list(target_bboxes)\n",
-    "        #print(target_keys_list)\n",
-    "        #print(target_bboxes_list)\n",
+    "\n",
     "        _i = 0\n",
     "        for _bbx in target_bboxes_list:\n",
     "            _i = _i + 1\n",
     "            id_list = []\n",
-    "            #for __bbx in target_bboxes_list[_i:]: ##forward\n",
+    "\n",
     "            for __bbx in target_bboxes_list:\n",
     "                if(_bbx == __bbx): ##the same id\n",
     "                    continue\n",
     "                if(IOU(_bbx, __bbx) > 0):\n",
     "                    id_list.append(target_keys_list[target_bboxes_list.index(__bbx)])\n",
     "            id_dic[(target_keys_list[_i-1])] = id_list\n",
-    "        #print('id_dic:{0}'.format(id_dic))\n",
+    "        #print('stage1') ### id_dic: {0:[1,2,3], 1:[0,4,5]}\n",
+    "        #print(id_dic)\n",
+    "        #break\n",
+    "\n",
     "        for k__, v__ in id_dic.items():\n",
     "            for v_ in v__:\n",
     "                if(len(id_dic[v_]) == 0):\n",
@@ -531,15 +511,9 @@
     "                id_dic[k__] = id_dic[k__] + id_dic[v_]\n",
     "                id_dic[k__] = list(set(id_dic[k__]))\n",
     "                id_dic[k__].sort()\n",
-    "        #print('id_dic:{0}'.format(id_dic))\n",
-    "\n",
-    "        \n",
-    "        #for __k in list(id_dic.keys()):\n",
-    "        #    if(len(id_dic[__k]) == 0):\n",
-    "        #        id_dic.pop(__k)       \n",
-    "        #print('id_dic:{0}'.format(id_dic))\n",
-    "        \n",
-    "        \n",
+    "        #print('stage2')\n",
+    "        #print(id_dic)\n",
+    "                \n",
     "        v_list = []\n",
     "        id_dic_refine = {}\n",
     "        for __k, __v in id_dic.items():\n",
@@ -549,9 +523,8 @@
     "                id_dic_refine[(__k)] = __v\n",
     "                \n",
     "        id_dic = id_dic_refine\n",
-    "        print('id_dic:{0}'.format(id_dic))\n",
-    "\n",
-    "        #continue;\n",
+    "        #print('stage3 ')\n",
+    "        #print('id_dic:{0}'.format(id_dic))\n",
     "        \n",
     "        FLAG = False\n",
     "        for i in range(REPEAT_TIMES):\n",
@@ -661,7 +634,7 @@
     "seed_xml_names.sort()\n",
     "print(\"###########################crop###################################\")\n",
     "\n",
-    "LOOPTIMES = 3\n",
+    "LOOPTIMES = 0\n",
     "for L in range(LOOPTIMES):\n",
     "    for xml_name in seed_xml_names:\n",
     "        img_name = SEED_IMG_DIR + xml_name[:-3] + TAIL\n",
@@ -727,6 +700,7 @@
     "SEED_IMG_DIR = generated_image_dir\n",
     "GENE_IMG_DIR = generated_image_dir\n",
     "GENE_XML_DIR = generated_xml_dir\n",
+    "\n",
     "print(\"#################################rescale###############################\")\n",
     "seed_xml_names = os.listdir(SEED_XML_DIR)\n",
     "seed_xml_names.sort()\n",
@@ -828,7 +802,7 @@
     "            xmlbox.find('ymin').text = str(int(ymin*(1-y_shrink_scale) + shrink_heigt/2))\n",
     "            xmlbox.find('ymax').text = str(int(ymax*(1-y_shrink_scale) + shrink_heigt/2))\n",
     "        tree.write(GENE_XML_DIR + \"ge_shrink_scale_\" + str(x_shrink_scale) + \"_\" + str(y_shrink_scale) +  \"_\" + str(padding) +\"_\" + xml)\n",
-    "\n",
+    "'''\n",
     "'''for i in [0.2]:\n",
     "    x_shrink_scale = i\n",
     "    y_shrink_scale = i\n",
@@ -879,7 +853,10 @@
     "        tree.write(GENE_XML_DIR + \"ge_shrink_scale_\" + str(x_shrink_scale) + \"_\" + str(y_shrink_scale) +  \"_\" + str(padding) +\"_\" + xml)\n",
     "        #cv2.imshow(\"demo\", array)\n",
     "        #cv2.waitKey(5000)\n",
-    "        #break '''        \n",
+    "        #break '''\n",
+    "####################################### for create negtive sample ################################################\n",
+    "print('for create negtive sample')\n",
+    "create_negtive_samples_from_bkg(SEED_BKG_DIR, 1000)\n",
     "os.system('python3 /datasets/labelImg/labelImg.py &')"
    ]
   },
