--- a/just_replace_bkg.ipynb
+++ b/just_replace_bkg.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\ntime_str = (datetime.datetime.now()).strftime(\"%Y%m%d\")\\npre_fix = \\'/media/yyp/DATA/\\'\\ngenerated_xml_dir = pre_fix + time_str + \\'_xml_replaced_bkg/\\'\\ngenerated_image_dir = pre_fix + time_str + \\'_image_replaced_bkg/\\'\\n\\nimage_dir = pre_fix + \\'20190922_image/\\'\\n'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, datetime\n",
     "import cv2\n",
@@ -25,26 +14,17 @@
     "import random\n",
     "from pathlib import Path\n",
     "\n",
-    "pre_fix = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_zhuhai_add/VOC2007/'\n",
+    "pre_fix = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_chongqing_changanvehicle/VOC2007/'\n",
     "generated_xml_dir = pre_fix + '/Annotations_/'\n",
     "generated_image_dir = pre_fix + '/JPEGImages_/'\n",
     "\n",
     "image_dir = pre_fix + '/seed_i/'\n",
-    "xml_dir = pre_fix + '/seed_x/'\n",
-    "\n",
-    "'''\n",
-    "time_str = (datetime.datetime.now()).strftime(\"%Y%m%d\")\n",
-    "pre_fix = '/media/yyp/DATA/'\n",
-    "generated_xml_dir = pre_fix + time_str + '_xml_replaced_bkg/'\n",
-    "generated_image_dir = pre_fix + time_str + '_image_replaced_bkg/'\n",
-    "\n",
-    "image_dir = pre_fix + '20190922_image/'\n",
-    "'''"
+    "xml_dir = pre_fix + '/seed_x/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +37,7 @@
     "SEED_IMG_DIR = image_dir\n",
     "GENE_IMG_DIR = generated_image_dir\n",
     "GENE_XML_DIR = generated_xml_dir\n",
-    "SEED_BKG_DIR = pre_fix + 'bg/'\n",
+    "SEED_BKG_DIR = pre_fix + 'seed_b/'\n",
     "\n",
     "def past_to_background_from_image_file(file, bboxes, background_img_array, tree, extend_spaces=0):\n",
     "    \n",
@@ -183,43 +163,32 @@
     "        continue\n",
     "    return True\n",
     "\n",
+    "def judgement_bk_match(xml_name, bk_name):\n",
+    "    if(xml_name[:len(bk_name[:-4])] == bk_name[:-4]):\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
     "seed_xml_names = os.listdir(SEED_XML_DIR)\n",
     "seed_bkg_names = os.listdir(SEED_BKG_DIR)\n",
     "seed_bkg_names.sort()\n",
     "seed_xml_names.sort()\n",
     "\n",
     "for xml_name in seed_xml_names:\n",
-    "    '''xml_name_part = xml_name[-15:-4]\n",
-    "    print(xml_name_part)\n",
-    "    if not (int(xml_name_part) >= 460000):\n",
-    "        continue'''\n",
-    "    #print(xml_name)\n",
     "    FOUND_FLAG = False\n",
     "    for i in seed_bkg_names:\n",
-    "        #if(i[:9]!= xml_name[:9]):\n",
-    "        #    continue\n",
-    "        #print(\"find\")\n",
+    "        if(not judgement_bk_match(xml_name, i)):\n",
+    "            continue\n",
     "        FOUND_FLAG = True\n",
-    "        background_img_data = cv2.imread(SEED_BKG_DIR + i)\n",
-    "        #print(background_img_data.shape)\n",
-    "    \n",
+    "        background_img_data = cv2.imread(SEED_BKG_DIR + i)    \n",
     "        if(not xml_name.endswith('.xml')):\n",
     "            continue\n",
     "        in_file = open(SEED_XML_DIR + xml_name)\n",
     "        tree=ET.parse(in_file)\n",
     "        bboxes = get_bboxes_from_etree(tree)\n",
-    "        #print(SEED_IMG_DIR + xml_name[:-3] + 'jpg')\n",
     "        past_to_background_from_image_file(SEED_IMG_DIR + xml_name[:-3] + 'jpg', bboxes, background_img_data, tree)\n",
     "    if(FOUND_FLAG==False):\n",
     "        print('not found' + xml_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
